fix spacing

--- a/final/portfolio.css
+++ b/final/portfolio.css
@@ -13,12 +13,13 @@
     background-color: rgba(221, 0, 255, 0.227);
 }
 
-.project{
-    display:flex;
+.project {
+    display: flex;
     flex-direction: row;
+    gap: 30px; 
     border: 1px solid black;
-    margin-top: 10px ;
-    padding: 15px 20px;
+    margin-top: 20px;
+    padding: 25px 30px;
 }
 
 .project img {
